updated resume and color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 .navbar {
-  background-color: #18202b;
+  background-color: #493b4d;
   padding-left: 22px;
   position: fixed;
   z-index: 350;
@@ -28,7 +28,7 @@ html {
 }
 
 .navbar-dark.scrolled {
-  background-color: #18202b !important;
+  background-color: #493b4d !important;
 }
 
 .nav-link {
@@ -53,7 +53,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #6a7f99;
+  background-color: #67556e;
   padding-top: 60px;
   padding-left: 60px;
   padding-right: 60px;
@@ -62,8 +62,7 @@ html {
 
 .jumbotronBg {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-  /* background-image: url("../assets/images/code-stock.jpeg"); */
-  background-image: url("../assets/images/digital_earth.jpg");
+  background-image: url("../assets/images/hand_shake.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -73,7 +72,7 @@ html {
 .jumbotronContent {
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -173,19 +172,19 @@ section {
 }
 
 .blackSection {
-  background-color: #18202a;
+  background-color: #151116;
   color: white;
   padding: 60px;
 }
 
 .purpleSection {
-  background-color: #16263c;
+  background-color: #493b4d;
   color: white;
   padding: 120px 60px;
 }
 
 .blackToPurpleSection {
-  background-image: linear-gradient(#18202a, #16263c);
+  background-image: linear-gradient(#151116, #493b4d);
   color: white;
   padding: 60px;
   height: 100vh;
@@ -194,7 +193,7 @@ section {
 }
 
 .purpleToBlackSection {
-  background-image: linear-gradient(#16263c, #18202a);
+  background-image: linear-gradient(#493b4d, #151116);
   color: white;
   padding: 60px;
   height: 100vh;
@@ -220,10 +219,6 @@ section {
   margin-bottom: 40px;
 }
 
-.btn {
-  background-color: #3f6cf2;
-}
-
 .card {
   overflow: hidden; /* Prevents any overflow from the card */
   max-width: 560px;
@@ -239,6 +234,8 @@ section {
 .card-img-side {
   width: 100%; /* Ensures the image takes full width of the card */
   height: auto; /* Maintains the aspect ratio */
+  max-height: 370px;
+  min-width: 500px;
 }
 
 .overlay {
@@ -257,6 +254,8 @@ section {
   justify-content: center; /* Horizontally center */
   text-align: center; /* Center text */
   padding: 0rem 1rem;
+  max-height: 370px;
+  min-width: 530px;
 }
 
 .position-relative:hover .overlay {
@@ -293,6 +292,13 @@ i {
 
 .contact:hover {
   color: white;
+}
+
+.social-btn {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  width: 9rem;
+  margin-bottom: -10px;
 }
 
 .footer {
